# hermeneia

./: .gitignore  .hypatia-ignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXPLAINME.adoc  README.adoc  flake.nix  sonar-project.properties
.github/: SECURITY.md  dependabot.yml  settings.yml
.github/workflows/: dogfood-gate.yml  estate-rules.yml  governance.yml  hypatia-scan.yml  mirror.yml  rust-ci.yml  scorecard.yml  secret-scanner.yml  slice.yml  sonarqube.yml
.machine_readable/: root-allow.txt
.machine_readable/6a2/: CLADE.a2ml  ECOSYSTEM.a2ml  STATE.a2ml
.machine_readable/ai/: AI.a2ml
.machine_readable/arrival-pack/: claude-md.k9.ncl
.machine_readable/coaptation/: coapt.k9.ncl
.machine_readable/contractiles/adjust/: adjust.k9.ncl
.machine_readable/contractiles/bust/: bust.k9.ncl
.machine_readable/contractiles/dust/: dust.k9.ncl
.machine_readable/contractiles/intend/: intend.k9.ncl
.machine_readable/contractiles/must/: must.k9.ncl
.machine_readable/contractiles/trust/: trust.k9.ncl
.machine_readable/self-validating/: methodology-guard.k9.ncl
container/stapeln/: deploy.k9.ncl
datasets/path-reference-drift/: README.adoc
docs/: SPEC.adoc  THEORY.adoc
scripts/: check-no-vlang.sh
src/hermeneia-cli/: Cargo.toml
src/hermeneia-cli/src/: main.rs
src/hermeneia-cli/tests/: gate.rs  slice.rs
src/hermeneia-core/: Cargo.toml
src/hermeneia-core/src/: lib.rs
src/hermeneia-ir/: Cargo.toml
src/hermeneia-ir/src/: json.rs  lib.rs
src/hermeneia-store/: Cargo.toml
src/hermeneia-store/corpus/: seed.jsonl
src/hermeneia-store/src/: lib.rs
src/hermeneia-syntax/: Cargo.toml
src/hermeneia-syntax/src/: lib.rs
