# SPDX-FileCopyrightText: © 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>
# SPDX-License-Identifier: MPL-2.0
[package]
name = "hermeneia-core"
description = "Voke operations, query planning, and licence state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hermeneia-ir = { path = "../hermeneia-ir" }
hermeneia-syntax = { path = "../hermeneia-syntax" }
hermeneia-store = { path = "../hermeneia-store" }
